# hackathon

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: blank.yml
blue_team_submission/: models.json
blue_team_submissions/: ttk_test.json
examples/: blue_team_starter.ipynb  calculate_alignment.ipynb  extract_activations.ipynb  find_dissimilar_images.py  models.ipynb  red_team_starter.ipynb
hackathon/: README.md
models/: one_model_per_family.json
red_team_submissions/: ttk_test.json
submission_red_team/: red_team_submission.json
