[project]
name = "hackathon"
version = "0.1.0"
description = "Calculate representational alignment metrics between neural network models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.9 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "tensorflow>=2.9,<2.17 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "thingsvision",
    "torch>=2.0.0 ; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torch>=2.0.0,<=2.2.0 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "torchvision>=0.17.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
thingsvision = { git = "https://github.com/representational-alignment/thingsvision" }
