[project]
name = "hackathon"
version = "0.1.0"
description = "Calculate representational alignment metrics between neural network models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.16 ; sys_platform != 'darwin' or platform_machine == 'x86_64'",
    "tensorflow-macos>=2.16 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "thingsvision",
    "torch>=2.7 ; sys_platform != 'darwin' or platform_machine == 'arm64'",
    "torch>=2.1,<2.3 ; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision>=0.17.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
thingsvision = { git = "https://github.com/representational-alignment/thingsvision" }
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
